frontend/src/features/settings/components/Settings.module.css
/* === LAYOUT === */
.header{
    max-width: 1200px;
    margin: 0 auto;
    padding: var(--space-md);
}

.settingsContent {
    max-width: 1200px;
    margin: 0 auto;
    padding: var(--space-xl);
}

/* === SETTINGS ITEMS === */
.settingsItem {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* --- information --- */
.itemInformation{
    display: flex;
    flex-direction: column;
    gap: var(--space-xs);
}

.itemAction{
    align-self: flex-end;
    margin-bottom: var(--space-xs);
}

/* === NAV === */
.navBar{
    border-bottom: 1.2px solid var(--accent-dark);
}

/* --- breadcrumb --- */
.breadcrumbNav{
    margin-bottom: var(--space-md);
}

.breadcrumbNav a:first-child{
    padding: 0 5px;
}

.breadcrumbNav > ol{
    display: flex;
    gap: var(--space-xs);
    list-style: none;
    align-items: center;
}

.breadcrumbSeparator {
    font-size: var(--font-size-xl);
    padding: 0 5px;
    color: var(--text-secondary);
}

.breadcrumbCurrent {
    color: var(--text-secondary);
}

